optimist download logic